書くための下準備が終了

--- a/index.html
+++ b/index.html
@@ -12,5 +12,34 @@
     <script src="assets/js/script.js"></script>
 </head>
 <body>
+    <header>
+        <header class="header">
+            <div>
+            <img src="assets/img/posse3_logo.png" alt="">
+            </div>
+            <div>
+            <ul class="header-List">
+                <li class="header-ListItem"><a href="#service">Service</a></li>
+                <li class="header-ListItem"><a href="#news">News</a></li>
+                <li class="header-ListItem"><a href="#contact">Contact</a></li>
+            </ul>
+            </div>
+        </header>
+    </header>
+    <main>
+        <section id="mainvisual"> 
+
+        </section>
+        <section id="link">
+
+        </section>
+        <section id="mypage">
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+</body>
 </body>
 </html>
