--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
             <div>
             <ul class="header-List">
-                <li class="header-ListItem"><a href="#service">Service</a></li>
-                <li class="header-ListItem"><a href="#news">News</a></li>
-                <li class="header-ListItem"><a href="#contact">Contact</a></li>
+                <li class="header-ListItem"><a href="">質問</a></li>
+                <li class="header-ListItem"><a href="">企画</a></li>
+                <li class="header-ListItem"><a href=""></a></li>
             </ul>
             </div>
         </header>
