--- a/index.html
+++ b/index.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html lang="jp">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>POSSE3熱中ウェブサイト</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/sp/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p&family=Noto+Sans+JP:wght@400;700&family=Noto+Serif+JP:wght@300;400;700&family=Plus+Jakarta+Sans:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/sp/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p&family=Noto+Sans+JP:wght@400;700&family=Noto+Serif+JP:wght@300;400;700&family=Plus+Jakarta+Sans:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Plus+Jakarta+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="assets/js/script.js"></script>
-</head>
-<body>
-        <header class="header">
-            <div>
-            <img src="assets/img/posse3_logo.png" alt="">
+  </head>
+  <body>
+    <header class="header">
+        <div class="header-inner">
+      <div>
+        <img src="assets/img/posse3_logo.png" alt="" />
+      </div>
+      <div>
+        <ul class="header-List">
+          <li class="header-ListItem"><a href="">
+            <div class="header-suggest-container">
+            <div class="suggest-img">
+                <img src="./assets/img/bluewoman.png" style="display: block;" alt="" width="30px" height="50px">
             </div>
-            <div>
-            <ul class="header-List">
-                <li class="header-ListItem"><a href="">Suggest</a></li>
-                <li class="header-ListItem"><a href=""></a></li>
-                <li class="header-ListItem"><a href=""></a></li>
-            </ul>
-            </div>
-       </header>
-    <main>
-        <section id="mainvisual"> 
-
-        </section>
-        <section id="link">
-
-        </section>
-        <section id="mypage">
-
-        </section>
+            <p class="suggest-text">Suggest</p>
+        </div>
+        </a>
+        </li>
+          <li class="header-ListItem"><a href=""></a></li>
+          <li class="header-ListItem"><a href=""></a></li>
+        </ul>
+      </div>
+    </div>
+    </header>
+    <main class="container">
+      <section id="mainvisual">
+        <div class="mainvisual-img"></div>
+      </section>
+      <section id="link"></section>
+      <section id="mypage"></section>
     </main>
     <footer>
-
+        <div class="footer-copyright">
+            <small lang="en">©2023 09 hackathon nigirimaguro</small>
+        </div>
     </footer>
-</body>
+  </body>
 </html>
