マイページの画像とリストcss完了

--- a/index.html
+++ b/index.html
@@ -26,13 +26,62 @@
             </div>
        </header>
     <main>
-        <section id="mainvisual"> 
+        <section id="mainvisual">
 
         </section>
         <section id="link">
 
         </section>
         <section id="mypage">
+            <div class="img-box">
+                <figure>
+                    <img src="./assets/img/present.png" alt="" class="present-img">
+                </figure>
+            </div>
+            <div class="check-list-box">
+                <ul class="check-list">
+                    <li class="list-item-box">
+                        <div class="list-item-check">
+                            <input type="checkbox" class="box">
+                        </div>
+                        <div class="list-item-task">
+                            <p>○○を初めてした!</p>
+                        </div>
+                    </li>
+                    <li class="list-item-box">
+                        <div class="list-item-check">
+                            <input type="checkbox" class="box">
+                        </div>
+                        <div class="list-item-task">
+                            <p>○○を初めてした!</p>
+                        </div>
+                    </li>
+                    <li class="list-item-box">
+                        <div class="list-item-check">
+                            <input type="checkbox" class="box">
+                        </div>
+                        <div class="list-item-task">
+                            <p>○○を2回目行った!</p>
+                        </div>
+                    </li>
+                    <li class="list-item-box">
+                        <div class="list-item-check">
+                            <input type="checkbox" class="box">
+                        </div>
+                        <div class="list-item-task">
+                            <p>○○を2回目行った!</p>
+                        </div>
+                    </li>
+                    <li class="list-item-box">
+                        <div class="list-item-check">
+                            <input type="checkbox" name=“check” value="1" class="box">
+                        </div>
+                        <div class="list-item-task">
+                            <p>○○を行った!</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
         </section>
     </main>
