--- a/suggest.html
+++ b/suggest.html
@@ -14,17 +14,28 @@
 </head>
 </head>
 <body class="sg_body">
-        <header class="header">
-            <div>
-            <img src="assets/img/posse3_logo.png" alt="">
+    <header class="header">
+        <div class="header-inner">
+      <div>
+        <img src="assets/img/posse3_logo.png" alt="" />
+      </div>
+      <div>
+        <ul class="header-List">
+          <li class="header-ListItem"><a href="">
+            <div class="header-suggest-container">
+            <div class="suggest-img">
+                <img src="./assets/img/bluewoman.png" style="display: block;" alt="" width="30px" height="50px">
             </div>
-            <div>
-            <ul class="header-List">
-                <li class="header-ListItem"><a href="">Suggest</a></li>
-                <li class="header-ListItem"><a href="">Question</a></li>
-            </ul>
-            </div>
-        </header>
+ <p class="suggest-text">Suggest</p>
+        </div>
+        </a>
+        </li>
+          <li class="header-ListItem"><a href=""></a></li>
+          <li class="header-ListItem"><a href=""></a></li>
+        </ul>
+      </div>
+    </div>
+    </header>
     <div class="container">
         <div class="suggest_title">
             <div class="suggest_title_textbox">
@@ -39,8 +50,10 @@
             <p class="suggest_detailtext">あなたが提案したい企画を匿名で投票できます！<br>みんなでPOSSEを盛り上げよう！！</p>
             <div class="sg-form-box">
                 <input id="sg-form" type="text" class="sg-form"  placeholder="新しい企画教えて！">
-                <button id="sg-button" class="sg-button">送信</button>
+                <button onclick="OnButtonClickSg()" id="sg-button" class="sg-button">送信</button>
             </div>
+        </div>
+        <div id="sg-formList">
         </div>
     </div>
 </body>
