--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <div class="header-inner">
       <div>
-        <img src="assets/img/posse3_logo.png" alt="" />
+        <img src="assets/img/posse3_logo.png" alt="" class="header-logo">
       </div>
       <div>
         <ul class="header-List">
@@ -31,7 +31,7 @@
             <div class="suggest-img">
                 <img src="./assets/img/bluewoman.png" style="display: block;" alt="" width="30px" height="50px">
             </div>
- <p class="suggest-text">Suggest</p>
+            <p class="suggest-text">Suggest</p>
         </div>
         </a>
         </li>
@@ -40,63 +40,84 @@
         </ul>
       </div>
     </div>
+  </div>
     </header>
-    <main class="container">
+    <main class="mainvisual-container">
       <section id="mainvisual">
         <div class="mainvisual-img"></div>
       </section>
-      <section id="link"></section>
-        <section id="mypage">
-            <div class="img-box">
-                <figure>
-                    <img src="./assets/img/present.png" alt="" class="present-img">
-                </figure>
-            </div>
-            <div class="check-list-box">
-                <ul class="check-list">
-                    <li class="list-item-box">
-                        <div class="list-item-check">
-                            <input type="checkbox" class="box">
-                        </div>
-                        <div class="list-item-task">
-                            <p>○○を初めてした!</p>
-                        </div>
-                    </li>
-                    <li class="list-item-box">
-                        <div class="list-item-check">
-                            <input type="checkbox" class="box">
-                        </div>
-                        <div class="list-item-task">
-                            <p>○○を初めてした!</p>
-                        </div>
-                    </li>
-                    <li class="list-item-box">
-                        <div class="list-item-check">
-                            <input type="checkbox" class="box">
-                        </div>
-                        <div class="list-item-task">
-                            <p>○○を2回目行った!</p>
-                        </div>
-                    </li>
-                    <li class="list-item-box">
-                        <div class="list-item-check">
-                            <input type="checkbox" class="box">
-                        </div>
-                        <div class="list-item-task">
-                            <p>○○を2回目行った!</p>
-                        </div>
-                    </li>
-                    <li class="list-item-box">
-                        <div class="list-item-check">
-                            <input type="checkbox" name=“check” value="1" class="box">
-                        </div>
-                        <div class="list-item-task">
-                            <p>○○を行った!</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
+      <section id="link">
+        <!-- ナビケーションボタン -->
+
+        <!-- suggestの説明 -->
+      <div class="sugggest-explain">
+        <h2 class="suggest-explain-title">
+          <span>Suggest</span>
+        </h2>
+        <div class="detail">
+        <p>新しいことに挑戦したいと思っているそこのあなた！！誰でも匿名でイベントの企画を提案できます。
+          <br>イベント開催までの流れ↓
+          <br>匿名でイベントを提案→「いいね！」が一定数つく→運営したい人の募集開始→開催へ
+          <br>レビュー機能で実際に運営した人の声を閲覧することが出来ます！！
+        </p>
+        <label>
+          <input type="checkbox"/>
+          続きを読む
+      </label>
+    </div>
+      </div>
+      </section>
+      <section id="mypage">
+        <div class="img-box">
+          <figure>
+              <img src="./assets/img/present.png" alt="" class="present-img">
+          </figure>
+      </div>
+      <div class="check-list-box">
+          <ul class="check-list">
+              <li class="list-item-box">
+                  <div class="list-item-check">
+                      <input type="checkbox" class="box">
+                  </div>
+                  <div class="list-item-task">
+                      <p>○○を初めてした!</p>
+                  </div>
+              </li>
+              <li class="list-item-box">
+                  <div class="list-item-check">
+                      <input type="checkbox" class="box">
+                  </div>
+                  <div class="list-item-task">
+                      <p>○○を初めてした!</p>
+                  </div>
+              </li>
+              <li class="list-item-box">
+                  <div class="list-item-check">
+                      <input type="checkbox" class="box">
+                  </div>
+                  <div class="list-item-task">
+                      <p>○○を2回目行った!</p>
+                  </div>
+              </li>
+              <li class="list-item-box">
+                  <div class="list-item-check">
+                      <input type="checkbox" class="box">
+                  </div>
+                  <div class="list-item-task">
+                      <p>○○を2回目行った!</p>
+                  </div>
+              </li>
+              <li class="list-item-box">
+                  <div class="list-item-check">
+                      <input type="checkbox" name=“check” value="1" class="box">
+                  </div>
+                  <div class="list-item-task">
+                      <p>○○を行った!</p>
+                  </div>
+              </li>
+          </ul>
+      </div>
+      </section>
     </main>
     <footer>
         <div class="footer-copyright">
