ヘッダーのレスポンシブ更新

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="header-ListItem"><a href="">
             <div class="header-suggest-container">
             <div class="suggest-img">
-                <img src="./assets/img/bluewoman.png" style="display: block;" alt="" width="30px" height="50px">
+                <img src="./assets/img/bluewoman.png" class="suggest-logo" style="display: block;" alt="" width="30px" height="50px">
             </div>
             <p class="suggest-text">Suggest</p>
         </div>
