ヘッダー変更

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             </div>
             <p class="suggest-text">Suggest</p>
         </div>
+        <li class="header-ListItem"><a href="">
+          <div class="header-question-container">
+            <div class="question-img">
+                <img src="./assets/img/k0562_10.png" alt="" class="question-logo">
+            </div>
+            <p class="question-text">Question</p>
+          </div>
+        </a></li>
         </a>
         </li>
           <li class="header-ListItem"><a href=""></a></li>
@@ -67,7 +75,7 @@
     </div>
       </div>
       </section>
-     <section id="mypage">
+    <section id="mypage">
             <div>My page</div>
             <div class="img-box">
                 <figure>
@@ -79,7 +87,7 @@
                   <ul class="check-list">
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <input type="checkbox" class="box" id="box1">
+                               <div class="boxdiv" id="box1"></div>
                           </div>
                           <div class="list-item-task">
                               <p>○○を初めてした!</p>
@@ -87,7 +95,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <input type="checkbox" class="box" id="box2">
+                              <button class="box" id="box2">
                           </div>
                           <div class="list-item-task">
                               <p>○○を初めてした!</p>
@@ -95,7 +103,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <input type="checkbox" class="box" id="box3">
+                              <button class="box" id="box3">
                           </div>
                           <div class="list-item-task">
                               <p>○○を2回目行った!</p>
@@ -103,7 +111,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <input type="checkbox" class="box" id="box4">
+                              <button type="checkbox" class="box" id="box4">
                           </div>
                           <div class="list-item-task">
                               <p>○○を2回目行った!</p>
@@ -111,7 +119,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <input type="checkbox" name=“check” value="1" class="box" id="box5">
+                              <button type="checkbox" name=“check” value="1" class="box" id="box5">
                           </div>
                           <div class="list-item-task">
                               <p>○○を行った!</p>
