--- a/suggest.html
+++ b/suggest.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suggest </title>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/sp/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +48,7 @@
             </figure>
         </div>
         <div>
-            <p class="suggest_detailtext">あなたが提案したい企画を匿名で投票できます！<br>みんなでPOSSEを盛り上げよう！！</p>
+            <p class="suggest_detailtext">あなたが企画を匿名で投票できます！<br>みんなでPOSSEを盛り上げよう！！</p>
             </div>
             <div class="sg-form-box">
                 <p class="sg-form-write-guide">名前を入力してください（匿名での提出も可能です）</p>
