question.htmlの編集を主に進めました！

--- a/suggest.html
+++ b/suggest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suggest </title>
+    <title>Suggest POSSE③熱中ウェブサイト</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/sp/style.css">
@@ -11,24 +11,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=M+PLUS+1p&family=Noto+Sans+JP:wght@400;700&family=Noto+Serif+JP:wght@300;400;700&family=Plus+Jakarta+Sans:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" defer></script>
 </head>
 </head>
 <body class="sg_body">
     <header class="header">
         <div class="header-inner">
       <div>
-        <a href="index.html"><img src="assets/img/posse3_logo.png" alt="" /></a>
+        <a href="index.html"><img src="assets/img/posse3_logo.png" alt="" class="header-logo"></a>
       </div>
       <div>
         <ul class="header-List">
           <li class="header-ListItem"><a href="#">
             <div class="header-suggest-container">
             <div class="suggest-img">
-                <img src="./assets/img/bluewoman.png" style="display: block;" alt="" width="30px" height="50px">
+                <img src="./assets/img/bluewoman.png" class="suggest-logo" style="display: block;" alt="" width="30px" height="50px">
             </div>
- <p class="suggest-text">Suggest</p>
+            <p class="suggest-text">Suggest</p>
         </div>
+        <li class="header-ListItem"><a href="question.html">
+          <div class="header-question-container">
+            <div class="question-img">
+                <img src="./assets/img/k0562_10.png" alt="" class="question-logo">
+            </div>
+            <p class="question-text">Question</p>
+          </div>
+        </a></li>
         </a>
         </li>
           <li class="header-ListItem"><a href=""></a></li>
@@ -36,7 +44,8 @@
         </ul>
       </div>
     </div>
-    </header>
+  </div>
+</header>
     <div class="container">
         <div class="suggest_title">
             <div class="suggest_title_textbox">
@@ -48,7 +57,7 @@
             </figure>
         </div>
         <div>
-            <p class="suggest_detailtext">あなたが企画を匿名で投票できます！<br>みんなでPOSSEを盛り上げよう！！</p>
+            <p class="suggest_detailtext">匿名でPOSSEのメンバーに質問したり答えたりすることができます！<br>熱中しているよ！</p>
             </div>
             <div class="sg-form-box">
                 <p class="sg-form-write-guide">名前を入力してください（匿名での提出も可能です）</p>
