マイページが五段階で見えるようになった

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <span>My page</span>
       </h2>
             <div class="img-box">
-                <figure>
+                <figure class="border">
                     <img src="./assets/img/present.png" alt="" class="present-img">
                 </figure>
             </div>
@@ -131,7 +131,7 @@
                   <ul class="check-list">
                       <li class="list-item-box">
                           <div class="list-item-check">
-                               <button class="box" id="box1" onclick="clear1()"></button>
+                              <button class="box" id="box1" onclick="clear1()"></button>
                           </div>
                           <div class="list-item-task">
                               <p>○○を初めてした!</p>
@@ -139,7 +139,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <button class="box" id="box2">
+                              <button class="box" id="box2" onclick="clear2()">
                           </div>
                           <div class="list-item-task">
                               <p>○○を初めてした!</p>
@@ -147,7 +147,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <button class="box" id="box3">
+                              <button class="box" id="box3" onclick="clear3()">
                           </div>
                           <div class="list-item-task">
                               <p>○○を2回目行った!</p>
@@ -155,7 +155,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <button type="checkbox" class="box" id="box4">
+                              <button class="box" id="box4" onclick="clear4()">
                           </div>
                           <div class="list-item-task">
                               <p>○○を2回目行った!</p>
@@ -163,7 +163,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
-                              <button type="checkbox" name=“check” value="1" class="box" id="box5">
+                              <button class="box" id="box5" onclick="clear5()">
                           </div>
                           <div class="list-item-task">
                               <p>○○を行った!</p>
