スライド完成！！

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <img src="./assets/img/Harbors week.JPG" alt="">
         </figure>
         <div class="suggest-itemBody">
-          <p class="event-itemName">Harbors week
+          <p class="suggest-itemName">Harbors week
           </p>
         </div>
       </li>
