ボタンがうまく表示されないのでもう一回

--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
                     <img src="./assets/img/present.png" alt="" class="present-img">
                 </figure>
             </div>
+            <div class="present-memo">
+              <date> 9月17日</date>
+              <p>4期生がタンクの使い方がわからずに困っているところに、はやとさんが!
+              </p>
+            </div>
             <div class="room">
               <div class="check-list-box">
                   <ul class="check-list">
