ヘッダーの調整

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
       </div>
       <div>
         <ul class="header-List">
-          <li class="header-ListItem"><a href="">
-            <div class="header-suggest-container">
+          <li class="header-ListItem"><a href="./suggest.html">
+            <div class="header-container">
             <div class="suggest-img">
                 <img src="./assets/img/bluewoman.png" class="suggest-logo" style="display: block;" alt="" width="30px" height="50px">
             </div>
             <p class="suggest-text">Suggest</p>
         </div>
-        <li class="header-ListItem"><a href="">
-          <div class="header-question-container">
+        <li class="header-ListItem"><a href="./question.html">
+          <div class="header-container">
             <div class="question-img">
-                <img src="./assets/img/k0562_10.png" alt="" class="question-logo">
+                <img src="./assets/img/k0562_10.png" alt="" class="question-logo" width="40px" height="60px">
             </div>
-            <p class="question-text">Question</p>
+            <p class="question-text">Question
+              <a href=""></a>
+            </p>
           </div>
         </a></li>
         </a>
