エラー回避

--- a/suggest.html
+++ b/suggest.html
@@ -23,22 +23,23 @@
       <div>
         <ul class="header-List">
           <li class="header-ListItem"><a href="#">
-            <div class="header-suggest-container">
+            <div class="header-container">
             <div class="suggest-img">
                 <img src="./assets/img/bluewoman.png" class="suggest-logo" style="display: block;" alt="" width="30px" height="50px">
             </div>
             <p class="suggest-text">Suggest</p>
         </div>
+      </a>
+    </li>
         <li class="header-ListItem"><a href="question.html">
-          <div class="header-question-container">
+          <div class="header-container">
             <div class="question-img">
-                <img src="./assets/img/k0562_10.png" alt="" class="question-logo">
+                <img src="./assets/img/k0562_10.png" alt="" class="question-logo" width="40px" height="60px">
             </div>
             <p class="question-text">Question</p>
           </div>
         </a></li>
-        </a>
-        </li>
+        
           <li class="header-ListItem"><a href=""></a></li>
           <li class="header-ListItem"><a href=""></a></li>
         </ul>
