--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
           <li class="header-ListItem"><a href="./suggest.html">
             <div class="header-container">
             <div class="suggest-img">
-                <img src="./assets/img/bluewoman.png" class="suggest-logo" style="display: block;" alt="" width="30px" height="50px">
+                <img src="./assets/img/bluewoman.png" class="suggest-logo" alt="">
             </div>
             <p class="suggest-text">Suggest</p>
         </div>
         <li class="header-ListItem"><a href="./question.html">
           <div class="header-container">
             <div class="question-img">
-                <img src="./assets/img/k0562_10.png" alt="" class="question-logo" width="40px" height="60px">
+                <img src="./assets/img/k0562_10.png" alt="" class="question-logo">
             </div>
             <p class="question-text">Question
               <a href=""></a>
