同じコードなのに表示違うので確認したいのです

--- a/question.html
+++ b/question.html
@@ -56,13 +56,13 @@
         </figure>
     </div>
     <div>
-        <p class="question_detailtext">あなたが企画を匿名で投票できます！<br>みんなと能動的に教わって、教えられる関係を作ろう！！</p>
+        <p class="question_detailtext">匿名で質問をすることができ、その質問に簡単に回答できます！<br>みんなと能動的に教わって、教えられる関係を作ろう！！</p>
         </div>
         <div class="qt-form-box">
             <p class="qt-form-write-guide">名前を入力してください（匿名での提出も可能です）</p>
             <input id="qt-name" type="text" class="qt-name" value="匿名">
             <p class="qt-form-write-guide">質問したい内容、もしくは返信したい内容を記入してください</p>
-            <textarea id="qt-form" type="text" class="qt-form"  placeholder="どんな質問、返信をしたい？" wrap="soft"></textarea>
+            <textarea id="qt-form" type="text" class="qt-form"  placeholder="" wrap="soft"></textarea>
             <button onclick="OnButtonClickQt()" id="qt-button" class="qt-button">送信</button>
         </div>
     </div>
