ヘッダーがハンバーガーメニューになりました

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
   </head>
   <body class="container">
     <!-- ヘッダー -->
-    <header class="header">
+    <header class="header" id="js-header">
         <div class="header-inner">
       <div>
-        <img src="assets/img/posse3_logo.png" alt="" class="header-logo">
+        <img src="assets/img/posse3_logo.png" alt="#" class="header-logo">
       </div>
+      <button class="header-button" id="js-headerButton">
+        <span class="header-buttonLine"></span>
+        <span class="header-buttonLine"></span>
+        <span class="header-buttonLine"></span>
+    </button>
       <div>
         <ul class="header-List">
           <li class="header-ListItem"><a href="./suggest.html">
