--- a/question.html
+++ b/question.html
@@ -14,39 +14,44 @@
     <script src="assets/js/script.js" defer></script>
 </head>
 <body class="qt-body">
-    <header class="header">
+    <header class="header" id="js-header">
         <div class="header-inner">
       <div>
         <a href="index.html"><img src="assets/img/posse3_logo.png" alt="" class="header-logo"></a>
       </div>
+      <button class="header-button" id="js-headerButton">
+        <span class="header-buttonLine"></span>
+        <span class="header-buttonLine"></span>
+        <span class="header-buttonLine"></span>
+    </button>
       <div>
         <ul class="header-List">
-          <li class="header-ListItem"><a href="suggest.html">
+          <li class="header-ListItem"><a href="./suggest.html">
             <div class="header-container">
             <div class="suggest-img">
-                <img src="./assets/img/bluewoman.png" class="suggest-logo" style="display: block;" alt="" width="30px" height="50px">
+                <img src="./assets/img/bluewoman.png" class="suggest-logo" alt="">
             </div>
             <p class="suggest-text">Suggest</p>
         </div>
-      </a>
-    </li>
         <li class="header-ListItem"><a href="#">
           <div class="header-container">
             <div class="question-img">
-                <img src="./assets/img/k0562_10.png" alt="" class="question-logo"  width="40px" height="60px">
+                <img src="./assets/img/k0562_10.png" alt="" class="question-logo">
             </div>
-            <p class="question-text">Question</p>
+            <p class="question-text">Question
+              <a href=""></a>
+            </p>
           </div>
         </a></li>
-        
-        
+        </a>
+        </li>
           <li class="header-ListItem"><a href=""></a></li>
           <li class="header-ListItem"><a href=""></a></li>
         </ul>
       </div>
     </div>
   </div>
-</header>
+    </header>
 <div class="container">
     <div class="question_title">
         <div class="question_title_textbox">
