ヘッダーの高さ修正とボタン押したときクリアの字でる

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       <h2 class="explain-title">
         <span>My page</span>
       </h2>
+      <div class="detail">
+        <p class="detail-text">達成したらボタンをクリック！<br>達成率が上がるほど、"POSSE③の最近の１枚"が出現！！</p>
+      </div>
             <div class="img-box">
                 <figure class="border">
                     <img src="./assets/img/present.png" alt="" class="present-img">
@@ -131,7 +134,7 @@
             </div>
             <div class="present-memo">
               <date> 9月17日</date>
-              <p>4期生がタンクの使い方がわからずに困っているところに、はやとさんが!ただ立てるだけだったとは<br>「ジェネレーションギャップだ！」と驚くはやとさん。突っ込むるい。<br>いえいえ、純粋に４期生の知識不足です(笑)
+              <p>4期生がタンクの使い方がわからずに困っているところに、はやとさんが！ただ立てるだけだったとは<br>「ジェネレーションギャップだ！」と驚くはやとさん。突っ込むるい。<br>いえいえ、純粋に４期生の知識不足です(笑)
               </p>
             </div>
             <div class="room">
@@ -139,6 +142,7 @@
                   <ul class="check-list">
                       <li class="list-item-box">
                           <div class="list-item-check">
+                            <div class="finish">clear</div>
                               <button class="box" id="box1" onclick="clear1()"></button>
                           </div>
                           <div class="list-item-task">
@@ -147,6 +151,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
+                            <div class="finish">clear</div>
                               <button class="box" id="box2" onclick="clear2()">
                           </div>
                           <div class="list-item-task">
@@ -155,6 +160,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
+                            <div class="finish">clear</div>
                               <button class="box" id="box3" onclick="clear3()">
                           </div>
                           <div class="list-item-task">
@@ -163,6 +169,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
+                            <div class="finish">clear</div>
                               <button class="box" id="box4" onclick="clear4()">
                           </div>
                           <div class="list-item-task">
@@ -171,6 +178,7 @@
                       </li>
                       <li class="list-item-box">
                           <div class="list-item-check">
+                            <div class="finish">clear</div>
                               <button class="box" id="box5" onclick="clear5()">
                           </div>
                           <div class="list-item-task">
