ヘッダーの高さ修正とボタン押したときクリアの字でる

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       <h2 class="explain-title">
         <span>My page</span>
       </h2>
-      <div class="detail">
-        <p class="detail-text">達成したらボタンをクリック！<br>達成率が上がるほど、"POSSE③の最近の１枚"が出現！！</p>
+      <div class="detail-myPage">
+        <p class="detail-text-my">達成したらボタンをクリック！<br>達成率が上がるほど、"POSSE③の最近の１枚"が出現！！</p>
       </div>
             <div class="img-box">
                 <figure class="border">
