--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       <section id="mainvisual">
         <div class="mainvisual-img"></div>
       </section>
-      <section id="link">
+
+      <section id="Suggest">
         <!-- 遷移ボタン -->
         <div class="nav">
           <ul class="navList">
@@ -149,7 +150,25 @@
     </ul>
   </div>
   </div>
-      </section>
+</section>
+  <!-- question説明 -->
+  <section id="Question"></section>
+  <div class="explain">
+    <h2 class="explain-title">
+      <span>Question</span>
+    </h2>
+    <div class="detail">
+    <p class="detail-text">
+
+    </p>
+    <label>
+      <input type="checkbox"/>
+      続きを読む
+  </label>
+</div>
+  </div>
+
+      
       <!-- マイページ -->
      <section id="mypage">
       <h2 class="explain-title">
