トップページのボタンのところのレスポンシブを修正しましta！

--- a/question.html
+++ b/question.html
@@ -82,5 +82,10 @@
     </div>
 </div>
 </div>
+<footer>
+    <div class="footer-copyright">
+        <small lang="en">©2023 09 hackathon nigirimaguro</small>
+    </div>
+</footer>
 </body>
 </html>
