--- a/suggest.html
+++ b/suggest.html
@@ -77,5 +77,10 @@
         <div id="sg-formList">
         </div>
     </div>
+    <footer>
+        <div class="footer-copyright">
+            <small lang="en">©2023 09 hackathon nigirimaguro</small>
+        </div>
+    </footer>
 </body>
 </html>
