--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header" id="js-header">
         <div class="header-inner">
       <div>
-        <img src="assets/img/posse3_logo.png" alt="#" class="header-logo">
+        <a href="#"><img src="assets/img/posse3_logo.png" alt="#" class="header-logo"></a>
       </div>
       <button class="header-button" id="js-headerButton">
         <span class="header-buttonLine"></span>
