--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
     </h2>
     <div class="detail">
     <p class="detail-text">
-
+      「教えることは教わること」にあるように、質問することは双方にメリットがあり!
+      <br>Q&A機能で分からない部分を解消することが出来ます!もちろん匿名でも利用可能！
+      <br>活発に質問し合うことで、技術力向上を目指しませんか？
     </p>
     <label>
       <input type="checkbox"/>
@@ -175,7 +177,7 @@
         <span>My page</span>
       </h2>
       <div class="detail-myPage">
-        <p class="detail-text-my">達成したらボタンをクリック！<br>達成率が上がるほど、"POSSE③の最近の１枚"が出現！！</p>
+        <p class="detail-text-my">達成したらボタンをクリック！<br>達成率が上がるほど、"POSSE③の最近の1枚"が出現！！</p>
       </div>
             <div class="img-box">
                 <figure class="border">
@@ -183,8 +185,9 @@
                 </figure>
             </div>
             <div class="present-memo">
+              <p>[画像の解説]</p>
               <date> 9月17日</date>
-              <p>4期生がタンクの使い方がわからずに困っているところに、はやとさんが！ただ立てるだけだったとは<br>「ジェネレーションギャップだ！」と驚くはやとさん。突っ込むるい。<br>いえいえ、純粋に４期生の知識不足です(笑)
+              <p>4期生がタンクの使い方がわからずに困っていると、はやとさんが!ただタンクをただ立てるだけだった<br>「ジェネレーションギャップだ！」と驚くはやとさん。突っ込むるい。<br>いえいえ、純粋に４期生の知識不足です(笑)
               </p>
             </div>
             <div class="room">
