--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
         </a></li>
         </a>
         </li>
-          <li class="header-ListItem"><a href=""></a></li>
-          <li class="header-ListItem"><a href=""></a></li>
         </ul>
       </div>
     </div>
@@ -92,6 +90,8 @@
             </li>
           </ul>
         </div>
+        <!-- scroll downボタン -->
+        <!-- <div class="scrolldown"><span>Scroll</span></div> -->
         <!-- suggestの説明 -->
       <div class="explain">
         <h2 class="explain-title">
