--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </li>
       <li class="splide__slide suggest-item " data-scroll>
         <figure class="suggest-itemImage">
-        <img src="./assets/img/water balloon.JPG" alt="" > 
+        <img src="./assets/img/water balloon.JPG" alt="" >
         </figure>
         <div class="suggest-itemBody">
         <p class="suggest-itemName">夏のDX</p>
@@ -175,7 +175,7 @@
         <span>My page</span>
       </h2>
       <div class="detail-myPage">
-        <p class="detail-text-my">達成したらボタンをクリック！<br>達成率が上がるほど、"POSSE③の最近の１枚"が出現！！</p>
+        <p class="detail-text-my">達成したらボタンをクリック！<br>達成するほど、"POSSE③の最近の１枚"が出現！！</p>
       </div>
             <div class="img-box">
                 <figure class="border">
@@ -191,16 +191,16 @@
               <div class="check-list-box">
                   <ul class="check-list">
                       <li class="list-item-box">
-                          <div class="list-item-check">
-                            <div class="finish">clear</div>
-                              <button class="box" id="box1" onclick="clear1()"></button>
-                          </div>
-                          <div class="list-item-task">
-                              <p>初めて質問を送った!</p>
-                          </div>
+                            <div class="list-item-check">
+                              <div class="finish">clear</div>
+                                <button class="box" id="box1" onclick="clear1()"></button>
+                            </div>
+                            <div class="list-item-task">
+                                <p>初めて質問を送った!</p>
+                            </div>
                       </li>
                       <li class="list-item-box">
-                          <div class="list-item-check">
+                         <div class="list-item-check">
                             <div class="finish">clear</div>
                               <button class="box" id="box2" onclick="clear2()">
                           </div>
